@@ -40,7 +40,10 @@ let actionTypes = {
   // stats
   UPDATE_STATS: "UPDATE_STATS",
   SET_CURRENT_STATS: "SET_CURRENT_STATS",
-  DELETE_CURRENT_STATS: "DELETE_CURRENT_STATS"
+  DELETE_CURRENT_STATS: "DELETE_CURRENT_STATS",
+  // auth
+  LOG_IN: "LOG_IN",
+  LOG_OUT: "LOG_OUT"
 
 };
 
